<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:clipChildren="true">

    <TextView
        android:id="@+id/school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/School"
        tools:text="Academy for Careers in Television and Film (ACTV)"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp" />

    <TextView
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noSatData"
        tools:text="@string/noSatData"
        style="@style/Error"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="4dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp">

        <ImageView
            android:contentDescription="@string/reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_menu_book_24"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"/>

        <TextView
            android:id="@+id/reading_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading"
            style="@style/School"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Detail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp">

        <ImageView
            android:contentDescription="@string/math"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_calculate_24"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp" />

        <TextView
            android:id="@+id/math_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math"
            style="@style/School"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/math"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Detail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp">

        <ImageView
            android:contentDescription="@string/writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp" />

        <TextView
            android:id="@+id/writing_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writing"
            style="@style/School"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"/>

        <TextView
            android:id="@+id/writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Detail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/test_takers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_takers"
            style="@style/School"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"/>

        <TextView
            android:id="@+id/test_takers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Detail" />
    </LinearLayout>
</LinearLayout>